ST Homework 3 update

--- a/2020 Summer/CSE 6331 Advance DB/Assignment 1/templates/main.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 1/templates/main.html
@@ -88,7 +88,7 @@
         />
       </form>
     </div>
-    <!-- Change caption -->
+    <!-- Change salary -->
     <div class="form-group col-md-6">
       <form action="/change-salary" method="post">
         <h4 class="font-weight-bold">Change salary for person</h4>
