--- a/2020 Summer/CSE 6331 Advance DB/Assignment 2/templates/main.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 2/templates/main.html
@@ -44,28 +44,59 @@
   <div class="row">
     <div class="form-group col-md-6">
       <form action="/eq-within-parameters" method="POST">
+        <b> Coordinates: </b><br>
         <label>Latitude: </label>
-        <input type="text" name="lattitude" value="32.7357" /><br />
+        <input type="text" name="lattitude" value="32.7357" />
         <label>Longitude: </label>
         <input type="text" name="longitude" value="-97.1081" /><br />
         <b> Magnitude </b> <br />
         <label> Min: </label>
-        <input type="number" name="mag_min" value="3.0" step="0.1"/><br />
+        <input type="number" name="mag_min" value="3.0" step="0.1"/>
         <label> Max:</label>
         <input type="number" name="mag_max" value="6.5" step="0.1"/><br />
         <b> Date:</b><br />
         <label> From:</label>
-        <input type="text" name="from_date" placeholder="YYYY-MM-DD" value="2020-07-13" /><br />
+        <input type="text" name="from_date" placeholder="YYYY-MM-DD" value="2020-07-13" />
         <label> To:</label>
         <input type="text" name="to_date" placeholder="YYYY-MM-DD" value="2020-07-20"/><br />
         <label> Distance(kms): </label>
         <input type="number" name="distance" min="0" value="500" /><br />
-        <br />
+        
         <input type="submit" value="Search" class="btn btn-primary" />
       </form>
     </div>
-    <div class="form-group col-md-6"></div>
+    <div class="form-group col-md-6"> 
+      <form action="/magnitude" method="POST" >
+      <label><strong> Closest Earthquake with Magnitude > 6 :</label> <br>
+          <input type="text" placeholder="Latitude" name="lat" required> </strong>
+          <input type="text" placeholder="Longitude" name="long" required> </strong>
+      <button type="submit" class="btn btn-primary">Search</button>
+  </form></div>
   </div>
   <hr />
+  <div class="row">
+    <div class="form-group col-md-6">
+    <form action="/within-distance" method="POST" >
+      <label><strong> Earthquakes within the given Distance :</label> 
+          <input type="text" placeholder="Latitude" name="lat" required> </strong>
+          <input type="text" placeholder="Longitude" name="long" required> </strong>
+          <input type="text" placeholder="Distance(km)" name="dist" required> </strong>
+      <button type="submit" class="btn btn-primary">Search</button>
+  </form>
+</div>
+<div class="form-group col-md-6">
+  <form action="/latlong" method="POST" >
+    <label><strong> All earthquakes 2 pairs of coordinates:</label> <br>
+        <input type="text" placeholder="Latitude 1" name="lat1" >
+        <input type="text" placeholder="Longitude 1" name="long1" > <br>
+        <input type="text" placeholder="Latitude 2" name="lat2" > 
+        <input type="text" placeholder="Longitude 2" name="long2" > 
+    <button type="submit" class="btn btn-primary">Search</button>
+  </form>
+</div>
+  </div>
+  <br>
+  <br>
+  <br>
 </div>
 {% endblock %}
