--- a/2020 Summer/CSE 6331 Advance DB/Assignment 4/templates/main.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 4/templates/main.html
@@ -9,41 +9,42 @@
 <!--Placeholder for body-->
 {% block body %}
 <div class="container">
-  {% if table|length>0 %}
-  <div class="table-responsive">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Salary</th>
-          <th scope="col">Room</th>
-          <th scope="col">Telephone</th>
-          <th scope="col">Picture</th>
-          <th scope="col">Keywords</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for data in table %}
-        <tr>
-          <td>{{ data[0] }}</td>
-          <td>{{ data[1] }}</td>
-          <td>{{ data[2] }}</td>
-          <td>{{ data[3] }}</td>
-          <td>{{ data[4] }}</td>
-          <td>{{ data[5] }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  {% else %}
-  <h4>No data available..</h4>
-  {% endif %}
-</div>
-<div class="container">
   <div class="row">
     <div class="form-group col-md-12">
-      <form action="/" method="post"></form>
+      <form action="/barchart" method="post">
+        <h4>All earthquakes within magnitude range</h4>
+        <p>Shown in pie and bar chart</p>
+        <label for="">Mag  from:</label>
+        <input type="number" name="mag_from" value="1.0" step="0.1">
+        <label for="">Mag  to:</label>
+        <input type="number" name="mag_to" value="6.0" step="0.1">
+        <label for="">Step:</label>
+        <input type="number" name="step" value="0.5" step="0.1">
+        <input type="submit" value="Search" class="btn btn-primary">
+      </form>
+    </div>
+    <br>
+    <div class="form-group col-md-12">
+      <form action="/scatterchart" method="post">
+        <h4>Total population vs Registered voters (scatterplot)</h4>
+        <label for="">Total population between:</label>
+        <input type="number" name="pop_min" value="1">
+        <label for="">and</label>
+        <input type="number" name="pop_max" value="10">
+        <label for="">(million)</label>
+        <input type="submit" value="Search" class="btn btn-primary">
+      </form>
+    </div>
+    <div class="form-group col-md-12">
+      <form action="/linechart" method="post">
+        <h4>Total population vs Registered voters (line chart)</h4>
+        <label for="">Total population between:</label>
+        <input type="number" name="pop_min" value="1">
+        <label for="">and</label>
+        <input type="number" name="pop_max" value="10">
+        <label for="">(million)</label>
+        <input type="submit" value="Search" class="btn btn-primary">
+      </form>
     </div>
   </div>
   <hr />
