--- a/2020 Summer/CSE 6331 Advance DB/Assignment 4/templates/scatterchart.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 4/templates/scatterchart.html
@@ -13,20 +13,11 @@
       google.charts.setOnLoadCallback(drawChart);
 
       function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ["Age", "Weight"],
-          [8, 12],
-          [4, 5.5],
-          [11, 14],
-          [4, 5],
-          [3, 3.5],
-          [6.5, 7],
-        ]);
-
+        var data = google.visualization.arrayToDataTable({{table|safe}});
         var options = {
-          title: "Age vs. Weight comparison",
-          hAxis: { title: "Age", minValue: 0, maxValue: 15 },
-          vAxis: { title: "Weight", minValue: 0, maxValue: 15 },
+          title: "Total population vs Registered voters (in millions)",
+          hAxis: { title: "Total Population", minValue: 0 },
+          vAxis: { title: "Registered voters", minValue: 0 },
           legend: "none",
         };
 
