--- a/2020 Summer/CSE 6331 Advance DB/Assignment 6/templates/base.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 6/templates/base.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Quiz 04</h1>
+        <h1 class="display-4">Assignment 06</h1>
         <p class="lead">
           <b>Student ID:</b> 1001827248 <br>
           <b>Name:</b> FNU Gauravdeep Singh <br>
