--- a/2020 Summer/CSE 6331 Advance DB/Assignment 6/templates/main1.html
+++ b/2020 Summer/CSE 6331 Advance DB/Assignment 6/templates/main1.html
@@ -10,30 +10,17 @@
 {% block body %}
 <div class="container">
   <div class="row">
-    {% if latitude %}
-    {{latitude}}
-    {% else %}
-    <p>No data...</p>
-    {% endif %}
     <div class="form-group col-md-12">
       <h4>Q6</h4>
         <form action="/q6" method="POST">
-            <label for="">Country: </label>
-            <input type="text" value="Italy" name="country">
-            <input type="submit" value="Search">
+            <label for="">Name: </label>
+            <input type="text" value="" name="name">
+            <label for="">Are you a teacher?(yes/no)</label>
+            <input type="text" value="yes" name="isTeacher">
+            <input type="submit" value="Submit">
         </form>
     </div>
     <br>
-    <div class="form-group col-md-12">
-      <h4>Q8</h4>
-      <form action="/q8" method="POST">
-        <label for="">Volcano Min: </label>
-        <input type="number" value="10104" name="volcano_min">
-        <label for="">Volcano Max: </label>
-        <input type="number" value="40105" name="volcano_max">
-        <input type="submit" value="Search">
-    </form>
-    </div>
     <br>
     <div class="form-group col-md-12">
     </div>
