--- a/Web Scraping/templates/base.html
+++ b/Web Scraping/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -47,11 +46,11 @@
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Quiz 06</h1>
+        <!-- <h1 class="display-4">Quiz 06</h1>
         <p class="lead">
           <b>Student ID:</b> 1001827248 <br>
           <b>Name:</b> FNU Gauravdeep Singh <br>
-        </p>
+        </p> -->
       </div>
     </div>
     {% block body %}{% endblock %}
